--- a/labs/src/Intro/index.html
+++ b/labs/src/Intro/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <div id="main" style="font-weight: bold; font-size: 50px; color: blue"></div>
+    <div id="info"></div>
     <div id="number" style="font-weight: 800; font-size: 20px; color: orange"></div>
 </body>
 </html>
